cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
project(mycuda CXX C CUDA)
set(CMAKE_CUDA_ARCHITECTURES 89)
# set(CMAKE_CUDA_FLAGS "-g -G -O3")
set(CMAKE_CUDA_FLAGS "-g -O3")
include_directories(./include)
add_subdirectory(1_ma)
add_subdirectory(2_ma)
add_subdirectory(3_ma)
add_subdirectory(4_ma)
add_subdirectory(5_ma)
add_subdirectory(0_attr)

