cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
project(mycuda CXX C CUDA)
set(CMAKE_CUDA_ARCHITECTURES 89)
# set(CMAKE_CUDA_FLAGS "-g -G -O3")
set(CUTLASS_DIR "/home/hlab/cuda/cutlass/")
set(CMAKE_CUDA_FLAGS " -lineinfo -O3")
set(CMAKE_CUDA_ARCHITECTURES 89)
set(CUTLASS_NVCC_ARCHS 89)
include_directories(./include)
include_directories("${CUTLASS_DIR}/include")
include_directories("${CUTLASS_DIR}/tools/util/include")
add_subdirectory(1_ma)
add_subdirectory(2_ma)
add_subdirectory(3_ma)
add_subdirectory(4_ma)
add_subdirectory(5_ma)
add_subdirectory(6_ma)
add_subdirectory(7_fuse_ma)
add_subdirectory(8_cu)
add_subdirectory(0_attr)

